# r1_vlm

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  troubleshooting_installation.md
attention_demo/: demo.py
data/: README.md  coco_class_count.py  coco_computation_dataset.py  inference_from_hf.py  r1_counting.py  r1_counting_balanced.py  r1_dataset.py  r1_digits.py  test_inferences.py
data/message_decoding/: poc_message_decoding_dataset.py  poc_message_decoding_r1.py
data/message_decoding_words/: message_decoding_words_dataset.py  message_decoding_words_r1.py
demo/: README.md  demo.py  requirements.txt
digit_recognition_environment/: digit_recognition_env.py  simple_vision_env.py  train.py  train_with_env.py
src/r1_vlm/datasets/: README.md  r1_digits.py  utils.py
src/r1_vlm/datasets/digits_doublecheck/: digits_doublecheck_r1.py
src/r1_vlm/datasets/digits_tool_use/: digits_tool_use_r1.py
src/r1_vlm/datasets/digits_tool_use_baseline/: digits_tool_use_baseline_r1.py
src/r1_vlm/datasets/message_decoding_sentences/: message_decoding_sentences_dataset.py  message_decoding_sentences_r1.py  sentences_dataset.py
src/r1_vlm/datasets/message_decoding_words/: message_decoding_words_dataset.py  message_decoding_words_r1.py  words_dataset.py
src/r1_vlm/datasets/message_decoding_words_and_sequences/: message_decoding_words_and_sequences.py  message_decoding_words_and_sequences_r1.py
src/r1_vlm/deepspeed_configs/: multi_gpu_3only.yaml
src/r1_vlm/environments/: README.md  double_check_env.py  multistep_vision_env.py  simple_vision_env.py  tool_vision_env.py
src/r1_vlm/environments/digit_recognition_env/: digit_recognition_env.py  train.py
src/r1_vlm/environments/digits_doublecheck_env/: digits_doublecheck_env.py  train.py
src/r1_vlm/environments/digits_tool_use/: digits_tool_use_env.py  train.py
src/r1_vlm/environments/digits_tool_use_baseline/: digits_tool_use_baseline_env.py  train.py
src/r1_vlm/environments/message_decoding_env/: message_decoding_env.py  train.py
src/r1_vlm/environments/message_decoding_sentences_env/: eval.py  message_decoding_sentences_env.py  train.py
src/r1_vlm/environments/message_decoding_words_and_sequences_env/: eval.py  message_decoding_sequences_env.py  train.py
src/r1_vlm/tools/: digits_answer_tool.py  tool_prompts.py
src/r1_vlm/tools/utils/: image_hash_table.py
train/: collate.py  counting_reward_fns.py  curriculum_utils.py  digit_recognition_reward_fns.py  message_decoding_reward_fns.py  multi_gpu.yaml  multi_gpu_3only.yaml  multi_gpu_3only_zero2_offload.yaml  multi_gpu_3only_zero3.yaml  prepare_inputs.py  reward_fns.py  train.py  train_counting.py  train_counting_step2.py  train_digit_recognition.py  train_digit_recognition_new_trainer.py  train_digit_recognition_vllm.py  train_message_decoding.py  train_message_decoding_new_trainer.py  train_message_decoding_words.py  train_message_decoding_words_vllm.py
