[build-system]
requires = ["hatchling", "torch==2.5.1"]
build-backend = "hatchling.build"

[project]
name = "r1-vlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Sunil Kumar", email = "sdkumar@hmc.edu" }
]
license = { text = "MIT" }
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "deepspeed>=0.16.3",
    "gradio>=5.16.0",
    "imgcat>=0.6.0",
    "ipdb>=0.13.13",
    "jinja2>=3.1.5",
    "peft>=0.14.0",
    "pycocotools>=2.0.8",
    "python-dotenv>=1.0.1",
    "qwen-vl-utils>=0.0.10",
    "torch==2.5.1",
    "torchvision==0.20.1",
    # I need the latest version of transformers for qwen2.5vl, I should lock this down once they release a new version
    "transformers @ git+https://github.com/huggingface/transformers.git@main",
    "vllm>=0.7.2",
    "wandb>=0.19.5",
    "verifiers",
    "flash-attn>=2.7.3",
    "spaces>=0.32.0",
    "imageio>=2.37.0",
    "levenshtein>=0.27.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
trl = { path = "../trl", editable = true }
verifiers = { path = "../verifiers", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/r1_vlm"]
